# test-bringup

./: CHANGELOG.md  README.md  pyproject.toml  tagentacle.toml
.github/: copilot-instructions.md
.github/workflows/: e2e.yml
test_bringup/: __init__.py
tests/: conftest.py  test_container_orchestrator.py  test_full_stack.py  test_full_stack_dual_agent.py  test_inference.py  test_mcp_gateway.py  test_node_events.py  test_pubsub.py  test_schema.py  test_secrets_injection.py  test_service.py  test_shell_mcp.py  test_shell_server.py
tests/e2e/: conftest.py  test_full_stack.py
tests/integration/: test_node_events.py  test_pubsub.py  test_schema.py  test_service.py
